Dodane funkcionalnosti za spajanje s backendom, uređene Welcome i Home komponente

--- a/src/gearshare-frontend/src/assets/styles/welcomePage.css
+++ b/src/gearshare-frontend/src/assets/styles/welcomePage.css
@@ -75,14 +75,36 @@
   width: 100%;
   max-width: 1000px;
   text-align: center;
+  background: peru;
+  border-radius: 8px;
+  color: beige;
+  padding: 20px 12px;
 }
 
 .steps-container {
+  padding: 5px 15px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
   gap: 25px;
   margin-top: 30px;
+}
+
+.steps-container button {
+  background: none;
+  font-weight: bolder;
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+}
+
+.steps-container button:hover {
+  background-color: beige;
+  color: peru;
+  opacity: 50%;
+  transition: all 0.25s ease-in-out;
+  cursor: pointer;
 }
 
 .step {
@@ -92,6 +114,7 @@
   box-shadow: 0 4px 10px rgba(0,0,0,0.1);
   padding: 25px;
   transition: transform 0.3s;
+  font-size: larger;
 }
 
 .step:hover {
@@ -99,8 +122,12 @@
 }
 
 .step h3 {
-  color: burlywood;
+  color: peru;
   margin-bottom: 10px;
+}
+
+.step p{
+  color: burlywood;
 }
 
 /* Poziv na akciju */
@@ -120,4 +147,26 @@
   color: burlywood;
   border-radius: 8px;
   font-weight: b
+}
+
+.banner-wrapper {
+  width: 100%;
+  aspect-ratio: 5 / 1;
+  overflow: hidden;
+  position: relative;
+  margin: 0 auto;
+}
+
+.banner-slider {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.6s ease;
+}
+
+.banner-image {
+  flex-shrink: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
