--- a/src/gearshare-frontend/src/index.css
+++ b/src/gearshare-frontend/src/index.css
@@ -161,6 +161,8 @@ footer {
 
 .user-information-container{
   display: flex;
+  flex-wrap: nowrap;
+  flex-direction: column;
 }
 
 .user-listings-container{
@@ -223,6 +225,7 @@ footer {
 }
 
 .listing-container {
+  margin: 10px;
   display: flex;
   flex-wrap: nowrap;
   flex-direction: column;
